covNの定義間違い

--- a/cichonsmaximum.tex
+++ b/cichonsmaximum.tex
@@ -121,7 +121,7 @@
 	これで非可算かつ連続体濃度以下とわかるわけだが，ここで問いを終えてしまうのはもったいない．連続体濃度の下に非可算基数があることもありえることが分かっているからだ．
 	そこで問の答えを
 	\[
-	\cov(\nul) = \min \{ \abs{\mathcal{A}}  : \mathcal{A}\text{はルベーグ測度}0\text{集合の族} \}
+	\cov(\nul) = \min \{ \abs{\mathcal{A}}  : \mathcal{A}\text{はルベーグ測度}0\text{集合の族で}\bigcup \mathcal{A} = \R \}
 	\]
 	とおいて，これがいろんな集合論のモデルでどうなっているのか調べよう．
 	また，他の似たような問いの答えを文字でおいてそれらの間の関係を調べよう：ZFCの範囲内で大小関係がつくのか，等しいのか，ZFCで等しいことを証明できないなら実際にどんなモデルで破れているのか．これが\textbf{基数不変量}の研究である．
