セクションのタイトルだけ

--- a/cichonsmaximum.tex
+++ b/cichonsmaximum.tex
@@ -69,6 +69,8 @@
 \newcommand{\DC}{\mathrm{DC}}
 \newcommand{\proj}{\operatorname{proj}}
 \newcommand{\cf}{\operatorname{cf}}
+\newcommand{\LCU}{\mathsf{LCU}}
+\newcommand{\COB}{\mathsf{COB}}
 
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
 \newcommand{\seq}[1]{{\langle#1\rangle}}
@@ -234,6 +236,11 @@
 	
 	\subsection{Cohen，ランダム，Hechler，アメーバ，eventually different強制法}
 	\subsection{goodness}
+	\subsection{$\LCU$と$\COB$}
+	
+	\section{Cichońの図式の左半分}
+	
+	\section{ブール超冪}
 	
 	\nocite{*}
 	\printbibliography[title={参考文献}]
