--- a/cichonsmaximum.tex
+++ b/cichonsmaximum.tex
@@ -222,9 +222,9 @@
 	連続体仮説の否定の無矛盾性以前にRothbergerの結果があるのがすごいが，この結果は「Luzin集合とSierpinski集合の両方が存在するならば連続体仮説が成り立つ」という定理の補題として証明された．
 	Cantorの$\aleph_0 < \frakc$以前にdu Bois-Reymondが$\aleph_0 < \frakb$を示していたことも驚くべきところであろう．
 	
-	Kunen-Millerの表というのは次のような表である．\cite{Miller1981SomePO}から抜粋した．Cichońの図式ができる前はこのような表でどの組合せが可能か，可能ならどのモデルかを表していた．
+	Kunen-Millerの表というのは図\ref{fig:kunen-miller}のようなものである．\cite{Miller1981SomePO}から抜粋した．Cichońの図式ができる前はこのような表でどの組合せが可能か，可能ならどのモデルかを表していた．
 	
-	\begin{figure}[h]
+	\begin{figure}[h!]\label{fig:kunen-miller}
 		\begin{center}
 		\includegraphics[width=7cm]{kunen-miller.png}
 		\caption{Kunen-Millerの表}
