細かい言い回しの変更

--- a/cichonsmaximum.tex
+++ b/cichonsmaximum.tex
@@ -121,7 +121,7 @@
 	\section{イントロダクション}
 	
 	実数全体の集合$\R$をLebesgue測度0集合たちで覆うには，それらが最低何個必要かという問いを考える．Lebesgue測度0集合の可算和はLebesgue測度0だから可算個では足りない．一方，$\bigcup_{r \in \R} \{r\} = \R$だから連続体濃度個あれば十分である．
-	これで非可算かつ連続体濃度以下とわかるわけだが，ここで問いを終えてしまうのはもったいない．連続体濃度の下に非可算基数があることもありえることが分かっているからだ．
+	これで非可算かつ連続体濃度以下とわかるわけだが，ここで問いを終えてしまうのはもったいない．連続体濃度の下に非可算基数が存在することもありえると分かっているからだ．
 	そこで問の答えを
 	\[
 	\cov(\nul) = \min \{ \abs{\mathcal{A}}  : \mathcal{A}\text{はルベーグ測度}0\text{集合の族で}\bigcup \mathcal{A} = \R \}
@@ -223,7 +223,7 @@
 	連続体仮説の否定の無矛盾性以前にRothbergerの結果があるのがすごいが，この結果は「Luzin集合とSierpinski集合の両方が存在するならば連続体仮説が成り立つ」という定理の補題として証明された．
 	Cantorの$\aleph_0 < \frakc$以前にdu Bois-Reymondが$\aleph_0 < \frakb$を示していたことも驚くべきところであろう．
 	
-	Kunen-Millerの表というのは図\ref{fig:kunen-miller}のようなものである．\cite{Miller1981SomePO}から抜粋した．Cichońの図式ができる前はこのような表でどの組合せが可能か，可能ならどのモデルかを表していた．
+	Kunen-Millerの表というのは図\ref{fig:kunen-miller}のようなものである．\cite{Miller1981SomePO}から抜粋した．Cichońの図式ができる前はどの組合せが可能かこのような表で表していた。
 	
 	\begin{figure}[h]\label{fig:kunen-miller}
 		\begin{center}
