--- a/cichonsmaximum.tex
+++ b/cichonsmaximum.tex
@@ -129,7 +129,7 @@
 	とおいて，これがいろんな集合論のモデルでどうなっているのか調べよう．
 	また，他の似たような問いの答えを文字でおいてそれらの間の関係を調べよう：ZFCの範囲内で大小関係がつくのか，等しいのか，ZFCで等しいことを証明できないなら実際にどんなモデルで破れているのか．これが\textbf{基数不変量}の研究である．
 	
-	基数不変量という言葉に厳密な定義はないが，「実数の構造によって定義される基数」のことである．
+	基数不変量という言葉に厳密な定義はないが，「実数の構造によって定義される基数」のことであり，その多くは$\aleph_1$以上$2^{\aleph_0}$以下であることが証明される．
 	
 	いくつかの基数不変量を定義しよう．
 	
