ジェネリック実数の解決関係

--- a/cichonsmaximum.tex
+++ b/cichonsmaximum.tex
@@ -249,7 +249,7 @@
 			\item $\relR_1 = (\mathcal{C}, \mathcal{C}, \{(x,y) : (\forall^\infty n) (x(n) \le y(n))\})$
 			\item $\relR_2 = (\Omega, 2^\omega, \{ (x, y) : y \not \in N_x \})$
 			\item $\relR_3 = (\omega^\omega, \omega^\omega, \{ (x,y) : (\forall^\infty n)(x(n) \le y(n))\})$
-			\item $\relR_4 = (\omega^\omega, \omega^\omega, \{ (x,y) : (\forall^\infty n) x(n) \ne y(n) \})$
+			\item $\relR_4 = (\omega^\omega, \omega^\omega, \{ (x,y) : (\forall^\infty n)(x(n) \ne y(n)) \})$
 		\end{enumerate}
 	\end{defi}
 
@@ -270,13 +270,21 @@
 		$\C$ジェネリックフィルター$G$から作られる実数$c = \bigcup G$をCohen実数という．
 		Cohen実数から$G$を復元できる：$G = \{ c \upharpoonright n : n \in \omega \}$.
 		Cohen強制法は可算なので，明らかに$\sigma$-centeredを満たす．特にcccを満たす．
+		Cohen実数は$\relR_4^\perp$を解決する：
+		\[
+		(\forall x \in \omega^\omega \cap V)(\exists^\infty n)(x(n) = \dot{c}(n)).
+		\]
 		
 		\subsubsection{ランダム強制法}
 		
 		$\B = \{ T : T\text{は}2^{<\omega}\text{の部分木で}\mu([T]) > 0 \}$で順序を包含関係で入れたもの$T' \le T \iff T' \subset T$をランダム強制法という．
 		$\B$ジェネリックフィルター$G$から作られる実数$r = \bigcap \{[T] : T \in G \}$をランダム実数という．
 		ランダム実数から$G$を復元できる：$G = \{ T \in \B : r \in [T] \}$．
-		ランダム強制法はcccを満たす．		
+		ランダム強制法はcccを満たす．
+		ランダム実数は$\relR_2$を解決する：
+		\[
+		(\forall x \in \Omega^V)(\dot{r} \not \in N_x).
+		\]
 		
 		\subsubsection{Hechler強制法}
 		
@@ -286,6 +294,10 @@
 		$\mathbb{D}$ジェネリックフィルター$G$から作られる実数$d = \bigcup \{ f \upharpoonright n : (n, f) \in G \}$をHechler実数という．
 		Hechler実数から$G$を復元できる：$G = \{ (n, f) : f \upharpoonright n = d \upharpoonright n \}$.
 		Hechler強制法は$\sigma$-centeredである．
+		Hechler実数は$\relR_3$を解決する：
+		\[
+		(\forall x \in \omega^\omega \cap V)(\forall^\infty n)(x \le^* \dot{d}).
+		\]
 		
 		\subsubsection{アメーバ強制法}
 		
@@ -301,6 +313,10 @@
 		を入れたものをeventually different強制法という．	
 		$\mathbb{E}$ジェネリックフィルター$G$から作られる実数$e = \bigcup \{ s  : (s, k, \varphi) \in G \}$をeventually different generic実数という．
 		eventually different強制法は$\sigma$-centeredである．
+		eventually different generic実数は$\relR_4$を解決する：
+		\[
+		(\forall x \in \omega^\omega \cap V)(\forall^\infty n)(x(n) \ne \dot{e}(n)).
+		\]
 		
 	\subsection{goodness}
 	\subsection{$\LCU$と$\COB$}
