ブール超冪を書き始める

--- a/cichonsmaximum.tex
+++ b/cichonsmaximum.tex
@@ -6,7 +6,7 @@
 \usepackage{braket}
 \usepackage{bm}
 \usepackage{mathrsfs}
-\usepackage{accents}
+\usepackage{mathabx}
 \usepackage{tocloft}
 \usepackage[dvipdfmx]{graphicx}
 \usepackage{tikz}
@@ -17,6 +17,8 @@
 \usepackage{framed}
 \usepackage{mathtools}
 \usepackage[explicit]{titlesec}
+\usepackage{stmaryrd}
+
 \usepackage{geometry}
 \geometry{left=35mm,right=35mm,top=35mm,bottom=35mm}
 
@@ -77,6 +79,7 @@
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
 \newcommand{\seq}[1]{{\langle#1\rangle}}
 \DeclarePairedDelimiterX{\norm}[1]{\lVert}{\rVert}{#1}
+\newcommand{\truth}[1]{\llbracket #1 \rrbracket}
 
 \renewcommand\emptyset{\varnothing}
 \renewcommand\subset{\subseteq}
@@ -503,6 +506,29 @@
 	\end{defi}
 	
 	\section{ブール超冪}
+	
+	$\kappa$を強コンパクト基数とし，$B$を$\kappa$分配的かつ$\kappa^+$-ccを持つ無原子完備ブール代数とする．
+	すると任意の$B$内の$\kappa$完備フィルターは$\kappa$完備なウルトラフィルターに拡大される．
+	また，ある$B$の反鎖$A_0$で濃度$\kappa$なものがあって，$A_0 \cap U = \emptyset$を満たす．
+	今，$\kappa$完備なウルトラフィルター$U$を固定する．
+	
+	\textbf{BUP名前}とは関数$x \colon A \to V$であって，その定義域$A$は$B$の極大反鎖であるものである．
+	$x$の定義域を$A(x)$と書く．
+	
+	任意のBUP名前は$V$の元の$B$-名前を定める：BUP名前$x$に対して$\{ (\widecheck{x(a)}, a) : a \in A(x) \}$である．
+	逆に$V$の元の$B$-名前はそれと強制同値なBUP名前を持つ．
+	BUP名前とそこから定まる$B$-名前を同一視する．
+	
+	2つのBUP名前に対してブール値$\truth{x=y}$が定まる．$x$と$y$が同値とは$\truth{x=y} \in U$であることを指す．
+	
+	$v \in V$の標準名前$\check{v}$とは$\{ (1_B, v) \}$のことである．
+	
+	ブール超冪$M^-$はBUP名前$x$の同値類$[x]$からなる．
+	$[x] \in^- [y]$を$\truth{x \in y} \in U$により定義する．
+	$j^- \colon V \to M^-$を$v$を$[\check{v}]$で定める．
+	
+	
+	
 	
 	\nocite{*}
 	\printbibliography[title={参考文献}]
