--- a/cichonsmaximum.tex
+++ b/cichonsmaximum.tex
@@ -435,6 +435,18 @@
 		\]
 		が成り立つ．
 	\end{lem}
+	\begin{proof}
+		$\kappa$個のCohen実数を追加した後の中間モデルで議論する。それを$V_\kappa$と呼ぶ。
+		残りの強制法、すなわち$\mu\setminus\kappa$個のCohenとgood強制法の反復はgoodである。
+		よって$V_\kappa$においてgoodnessを目撃する集合$\mathcal{Y}$でサイズ${<}\lambda$なものを得る。 
+
+		最初のCohen強制法はcccであり、$\kappa\ge \lambda$は正則なので、ある番号$\alpha\in\kappa$がとれてどの元$y \in \mathcal{Y}$もすでに
+		最初の$\alpha$個のCohenを付け加えたモデルに存在する。そのモデルを$V_{\alpha}$と書こう。
+		$y$によってboundされる実数たちの集合$M_y$はmeagerであり、それは絶対的である。
+		どの$\beta\in\kappa\setminus \alpha$に対しても$c_\beta$は$V_{\alpha}$上のCohen実数なので$M_y$に属さない。すなわち$y$にboundされない。
+		つまり、$\mathcal Y$によってboundされない。
+		したがって、goodnessの定義より、各$c_\beta$は与えられた$y$にboundされないことが強制される。
+	\end{proof}
 	
 	\subsection{$\EUB$と$\COB$}
 	
