句読点修正

--- a/cichonsmaximum.tex
+++ b/cichonsmaximum.tex
@@ -436,16 +436,16 @@
 		が成り立つ．
 	\end{lem}
 	\begin{proof}
-		$\kappa$個のCohen実数を追加した後の中間モデルで議論する。それを$V_\kappa$と呼ぶ。
-		残りの強制法、すなわち$\mu\setminus\kappa$個のCohenとgood強制法の反復はgoodである。
-		よって$V_\kappa$においてgoodnessを目撃する集合$\mathcal{Y}$でサイズ${<}\lambda$なものを得る。 
+		$\kappa$個のCohen実数を追加した後の中間モデルで議論する．それを$V_\kappa$と呼ぶ．
+		残りの強制法，すなわち$\mu\setminus\kappa$個のCohenとgood強制法の反復はgoodである．
+		よって$V_\kappa$においてgoodnessを目撃する集合$\mathcal{Y}$でサイズ${<}\lambda$なものを得る． 
 
-		最初のCohen強制法はcccであり、$\kappa\ge \lambda$は正則なので、ある番号$\alpha\in\kappa$がとれてどの元$y \in \mathcal{Y}$もすでに
-		最初の$\alpha$個のCohenを付け加えたモデルに存在する。そのモデルを$V_{\alpha}$と書こう。
-		$y$によってboundされる実数たちの集合$M_y$はmeagerであり、それは絶対的である。
-		どの$\beta\in\kappa\setminus \alpha$に対しても$c_\beta$は$V_{\alpha}$上のCohen実数なので$M_y$に属さない。すなわち$y$にboundされない。
-		つまり、$\mathcal Y$によってboundされない。
-		したがって、goodnessの定義より、各$c_\beta$は与えられた$y$にboundされないことが強制される。
+		最初のCohen強制法はcccであり，$\kappa\ge \lambda$は正則なので，ある番号$\alpha\in\kappa$がとれてどの元$y \in \mathcal{Y}$もすでに
+		最初の$\alpha$個のCohenを付け加えたモデルに存在する．そのモデルを$V_{\alpha}$と書こう．
+		$y$によってboundされる実数たちの集合$M_y$はmeagerであり，それは絶対的である．
+		どの$\beta\in\kappa\setminus \alpha$に対しても$c_\beta$は$V_{\alpha}$上のCohen実数なので$M_y$に属さない．すなわち$y$にboundされない．
+		つまり，$\mathcal Y$によってboundされない．
+		したがって，goodnessの定義より，各$c_\beta$は与えられた$y$にboundされないことが強制される．
 	\end{proof}
 	
 	\subsection{$\EUB$と$\COB$}
@@ -477,13 +477,13 @@
 		$\COB(\relR, P, \lambda, \mu)$は$P \forces (\frakb_\relR \ge \lambda \AND \frakd_\relR \le \mu)$を含意する．
 	\end{lem}
 	\begin{proof}
-		集合$(\dot{y}_s)_{s\in S}$はサイズ$\mu$のdominating familyなので$\mathfrak{d}_\relR\le \mu$を得る。
+		集合$(\dot{y}_s)_{s\in S}$はサイズ$\mu$のdominating familyなので$\mathfrak{d}_\relR\le \mu$を得る．
 
-		$\mathfrak{b}_\relR \ge \lambda$を示すために、$(\dot{x}_\alpha)_{\alpha\in\theta}$を長さ$\theta<\lambda$なる$X$の元の$P$名前の列とする。
-		各$\dot{x}_\alpha$について、$s_\alpha\in S$があって、$(\forall t\succ s_\alpha)\, P\forces \dot{x}_\alpha \sqsubset \dot{y}_t$である。
-		$S$は${<}\lambda$-directedなので、ある$t$があってどの$s_\alpha$よりも大きい。
-		したがって、$P\forces \dot{x}_\alpha \sqsubset \dot{y}_t $がすべての$\alpha$で成り立つ。
-		すなわち$\{\dot{x}_\alpha:\, \alpha\in\theta\}$はboundedである。
+		$\mathfrak{b}_\relR \ge \lambda$を示すために，$(\dot{x}_\alpha)_{\alpha\in\theta}$を長さ$\theta<\lambda$なる$X$の元の$P$名前の列とする．
+		各$\dot{x}_\alpha$について，$s_\alpha\in S$があって，$(\forall t\succ s_\alpha)\, P\forces \dot{x}_\alpha \sqsubset \dot{y}_t$である．
+		$S$は${<}\lambda$-directedなので，ある$t$があってどの$s_\alpha$よりも大きい．
+		したがって，$P\forces \dot{x}_\alpha \sqsubset \dot{y}_t $がすべての$\alpha$で成り立つ．
+		すなわち$\{\dot{x}_\alpha:\, \alpha\in\theta\}$はboundedである．
 	\end{proof}
 
 	上の注意と補題\ref{lem:cobimpliesineq}より$\EUB(\relR, P, \lambda)$は$P \forces (\frakb_\relR \le \lambda \AND \frakd_\relR \ge \lambda)$を含意する．
